# template-dna

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  VISUAL_AUDIT_IMPROVEMENTS.md  pyproject.toml  requirements.txt  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
commands/: brand-extract.md  brand-generate.md  brand-list.md  brand-verify.md
docs/: DIRECTORY_SUBMISSIONS.md  PLUGIN_WORKFLOW.md  index.html  llms.txt  robots.txt  sitemap.xml
documentation/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  PLUGIN_WORKFLOW.md  README.md  ROADMAP.md  SKILLS.md  USAGE.md
examples/: README.md
scripts/: cli.py  corpus_benchmark.py  setup_visual_qa.sh
scripts/brandkit/: README.md  cli.py  (+2 more)
tests/: test_appearance_refactor_anchor.py  test_compare_profiles.py  test_comprehension.py  test_corpus_benchmark.py  test_cover_synthesis.py  test_docx_complex_fidelity.py  test_docx_fixes.py  test_examples_kitchen_sink.py  test_fixture_determinism.py  test_generation_report.py  test_integration_verify.py  test_ir_model.py  test_no_proprietary.py  test_overrides_learn.py  test_overrides_resolver.py  test_overrides_schema.py  test_pptx_fixes.py  test_profile_blend.py  test_profilemd.py  test_qa_structural_diffs.py  test_reference_sync.py  test_regression_findings.py  test_security.py  test_smoke.py  test_toc_refresh.py  test_typography.py  test_visual_qa.py  test_xlsx_complex_fidelity.py  test_xlsx_comprehension.py  test_xlsx_fixes.py
(+67 files in other folders)
